@@ -39,7 +39,7 @@ $dbpasswd = 'cspasswd';
 # system metric reports.  If this remains commented out, then no
 # authentication will be required, and users have full access to the
 # system.
-#$admin_users = [ 'david.sitsky@gmail.com' ];
+$admin_users = [ 'david.sitsky@gmail.com' ];
 #$admin_users = [ 'david.sitsky@gmail.com', 'sits@users.sourceforge.net' ];
 
 # Location of the mailing host.  This is used when sending out codestriker
@@ -233,9 +233,13 @@ $repository_name_map =
 # not required for remote CVSweb and ViewCVS repositories, as they are
 # viewers themselves.  When viewing reviews, links from filenames will be
 # mapped to these URLs, to obtain revision log information for that file.
+# The filename will be appended to the end of the URL, before any CGI
+# parameters.
 $file_viewer =
 {
-    '/home/sits/cvs' => 'http://localhost/cgi-bin/cvsweb.cgi'
+    '/home/sits/cvs' => 'http://localhost/cgi-bin/cvsweb.cgi',
+    'svn:file:///var/svn/project/trunk' =>
+        'http://some.whe.re/cgi-bin/viewvc.cgi/trunk/?root=Project&view=markup'
 };
 
 # Exclude these file types from review topics.   
